--- a/golfers/package.json
+++ b/golfers/package.json
@@ -7,7 +7,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "mongoose": "^6.1.6",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -15,10 +19,12 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@types/node": "16.11.11",
+    "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.2"
+    "prisma": "^3.8.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
