--- a/golfers/package.json
+++ b/golfers/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^3.9.0",
     "next": "12.0.7",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
