--- a/golfers/package.json
+++ b/golfers/package.json
@@ -11,7 +11,9 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.9.0",
+    "bcryptjs": "^2.4.3",
     "next": "12.0.7",
     "next-auth": "^4.1.2",
     "react": "17.0.2",
@@ -19,6 +21,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.0",
