--- a/golfers/package.json
+++ b/golfers/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
