--- a/golfers/tsconfig.json
+++ b/golfers/tsconfig.json
@@ -19,7 +19,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/api/auth/[...nextauth].ts"
+    "pages/api/auth/[...nextauth].ts",
+    "pages/api/user/[id]"
   ],
   "exclude": ["node_modules"]
 }
