--- a/golfers/package.json
+++ b/golfers/package.json
@@ -11,6 +11,9 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.9.0",
     "bcryptjs": "^2.4.3",
